# lark-cli

./: .env.template  .gitignore  CLAUDE.md  Cargo.toml  README.md  install.ps1  install.sh
.github/workflows/: release.yml
src/: error.rs  lib.rs  main.rs
src/api/: batch_update_blocks.rs  block_converter.rs  board.rs  convert_blocks.rs  create_board_notes.rs  create_nested_blocks.rs  delete_blocks.rs  document.rs  docx.rs  download_media.rs  file.rs  get_blocks.rs  get_board_image.rs  get_message_history.rs  get_user_info.rs  import_documents.rs  media.rs  message.rs  mod.rs  permission.rs  search_chats.rs  wiki.rs
src/auth/: mod.rs
src/commands/: add_board.rs  add_callout.rs  blocks.rs  create_board_notes.rs  document.rs  docx.rs  download_media.rs  file.rs  get_board_image.rs  get_user_info.rs  import.rs  import_diagram.rs  message.rs  mod.rs  permission.rs  update.rs  wiki.rs
src/config/: mod.rs
src/model/: block.rs  block_v2.rs
src/output/: mod.rs
src/utils/: file_utils.rs
tests/: mod.rs
tests/auth/: mod_test.rs
tests/config/: mod.rs  mod_test.rs
tests/output/: mod_test.rs
tests/utils/: file_utils_test.rs  mod.rs
usage/: README.md
