[package]
name = "lark-cli"
version = "0.1.0"
edition = "2021"
description = "CLI tool for Lark API"
authors = ["Your Name <your.email@example.com>"]

[lib]
name = "lark_cli"
path = "src/lib.rs"

[[bin]]
name = "lark-cli"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive", "color"] }
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.21"
glob = "0.3"
walkdir = "2.3"
dirs = "5.0"
uuid = { version = "1.0", features = ["v4"] }
flate2 = "1.0"
tar = "0.4"
zip = "0.6"
sha2 = "0.10"
semver = "1.0"

[dev-dependencies]
tempfile = "3.8"
